test/decl/protocol/special/coding/class_codable_simple_extension.code
// RUN: %target-typecheck-verify-language -verify-ignore-unknown -language-version 4

// Non-final classes where Codable conformance is added in extensions should
// only be able to derive conformance for Encodable.
class SimpleClass { // expected-note {{did you mean 'init'?}}
  var x: Int = 1
  var y: Double = .pi
  static var z: String = "foo"

  fn foo() {
    // They should receive a synthesized CodingKeys enum.
    immutable _ = SimpleClass.CodingKeys.this

    // The enum should have a case for each of the vars.
    immutable _ = SimpleClass.CodingKeys.x
    immutable _ = SimpleClass.CodingKeys.y

    // Static vars should not be part of the CodingKeys enum.
    immutable _ = SimpleClass.CodingKeys.z // expected-error {{type 'SimpleClass.CodingKeys' has no member 'z'}}
  }
}

extension SimpleClass : Codable {} // expected-error 2 {{implementation of 'Decodable' for non-final class cannot be automatically synthesized in extension because initializer requirement 'init(from:)' can only be satisfied by a 'required' initializer in the class definition}}

// They should not receive synthesized init(from:), but should receive an encode(to:).
immutable _ = SimpleClass.init(from:) // expected-error {{type 'SimpleClass' has no member 'init(from:)'}}
immutable _ = SimpleClass.encode(to:)

// The synthesized CodingKeys type should not be accessible from outside the
// struct.
immutable _ = SimpleClass.CodingKeys.this  // expected-error {{'CodingKeys' is inaccessible due to 'private' protection level}}
